--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,38 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/english-bot', '.']
+  # Build the Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/english-bot', '.']
+  
+  # Push the image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/english-bot']
+  
+  # Deploy to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    args:
+    - 'gcloud'
+    - 'run'
+    - 'deploy'
+    - 'english-bot'
+    - '--image'
+    - 'gcr.io/$PROJECT_ID/english-bot'
+    - '--region'
+    - 'us-central1'
+    - '--platform'
+    - 'managed'
+    - '--allow-unauthenticated'
+    - '--port'
+    - '8080'
+    - '--timeout'
+    - '300s'
+    - '--set-env-vars'
+    - 'GOOGLE_CLOUD_PROJECT=$PROJECT_ID'
+    - '--set-secrets'
+    - 'TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN:latest,GOOGLE_API_KEY=GOOGLE_API_KEY:latest'
+    - '--min-instances'
+    - '1'
+    - '--max-instances'
+    - '3'
 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/english-bot']
-
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  args: ['gcloud', 'run', 'deploy', 'english-bot',
-         '--image', 'gcr.io/$PROJECT_ID/english-bot',
-         '--region', 'us-central1',
-         '--platform', 'managed',
-         '--allow-unauthenticated',
-         '--set-secrets', 'TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN:latest,GOOGLE_API_KEY=GOOGLE_API_KEY:latest']
+# Store the image in Container Registry
+images: ['gcr.io/$PROJECT_ID/english-bot']
