--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-python-telegram-bot==20.3
+fastapi==0.109.2
+uvicorn==0.27.1
+python-telegram-bot==20.6
 google-generativeai==0.3.2
 google-cloud-secret-manager==2.16.1
 google-cloud-logging==3.8.0
-fastapi==0.95.2
-uvicorn==0.22.0
+gunicorn==21.2.0
 aiohttp==3.9.3
-python-dotenv==1.0.0
